--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,12 @@ nav ul li, footer ul li {
 a {
     text-decoration: none;
     color: #666;
+    font-weight: bold;
+
 }
 a:hover {
-    text-decoration: underline;
+    text-decoration: underline;   
+    color: black;
 }
 h1 {
     font-size: 3em;
