--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:info@arriartgroup.com">E: info@arriartgroup.com</a></li>
+        		<li><a href="mailto:info@adartgroup.com">E: info@adartgroup.com</a></li>
 <!--         		<li><a href="https://github.com/developer-xavier">github.com/developer-xavier</a></li> -->
 			</ul>
 		</footer>
